[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/email/EmailView.gd" type="Script" id=1]
[ext_resource path="res://ui/email/EmailWindow.gd" type="Script" id=2]
[ext_resource path="res://ui/email/Attachment.tscn" type="PackedScene" id=3]

[node name="EmailContent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailList" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="EmailList"]
margin_right = 1280.0
size_flags_horizontal = 3

[node name="EmailView" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="HBoxContainer" parent="EmailView"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -690.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="EmailView/Options"]
margin_left = 589.0
margin_right = 631.0
margin_bottom = 20.0
mouse_filter = 1
text = "Back"

[node name="Spam" type="Button" parent="EmailView/Options"]
visible = false
margin_left = 610.0
margin_right = 657.0
margin_bottom = 20.0
mouse_filter = 1
text = "Spam"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="Button" parent="EmailView/Options"]
margin_left = 635.0
margin_right = 690.0
margin_bottom = 20.0
mouse_filter = 1
disabled = true
text = "Delete"

[node name="HeaderTitles" type="VBoxContainer" parent="EmailView"]
anchor_top = 0.043
anchor_right = 0.07
anchor_bottom = 0.09
margin_top = 0.33
margin_right = 0.400002
margin_bottom = -0.100002
__meta__ = {
"_edit_use_anchors_": false
}

[node name="From" type="Label" parent="EmailView/HeaderTitles"]
margin_right = 90.0
margin_bottom = 14.0
mouse_filter = 1
text = "From:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subject" type="Label" parent="EmailView/HeaderTitles"]
margin_top = 18.0
margin_right = 90.0
margin_bottom = 32.0
mouse_filter = 1
text = "Subject:"
align = 2

[node name="HeaderInfo" type="VBoxContainer" parent="EmailView"]
anchor_left = 0.078
anchor_top = 0.043
anchor_right = 1.0
anchor_bottom = 0.09
margin_left = 0.159996
margin_top = 0.33
margin_bottom = -30.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="From" type="Label" parent="EmailView/HeaderInfo"]
margin_right = 1180.0
margin_bottom = 14.0
mouse_filter = 1
text = "From:"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subject" type="Label" parent="EmailView/HeaderInfo"]
margin_top = 18.0
margin_right = 1180.0
margin_bottom = 32.0
mouse_filter = 1
text = "Subject:"
clip_text = true

[node name="EmailBody" type="ScrollContainer" parent="EmailView"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="EmailView/EmailBody"]
margin_right = 1280.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BodyText" type="RichTextLabel" parent="EmailView/EmailBody/Container"]
margin_right = 1280.0
margin_bottom = 488.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EmailView/EmailBody/Container"]
margin_top = 492.0
margin_right = 1280.0
margin_bottom = 506.0
text = "Attachments:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attachments" type="HBoxContainer" parent="EmailView/EmailBody/Container"]
margin_top = 510.0
margin_right = 1280.0
margin_bottom = 610.0
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attachment" parent="EmailView/EmailBody/Container/Attachments" instance=ExtResource( 3 )]
margin_left = 465.0
margin_right = 565.0

[node name="Attachment2" parent="EmailView/EmailBody/Container/Attachments" instance=ExtResource( 3 )]
margin_left = 590.0
margin_right = 690.0

[node name="Attachment3" parent="EmailView/EmailBody/Container/Attachments" instance=ExtResource( 3 )]
margin_left = 715.0
margin_right = 815.0
[connection signal="pressed" from="EmailView/Options/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="EmailView/Options/Spam" to="." method="_on_Spam_pressed"]
[connection signal="pressed" from="EmailView/Options/Delete" to="." method="_on_Delete_pressed"]
[connection signal="gui_input" from="EmailView/HeaderTitles/From" to="EmailView" method="_on_From_gui_input"]
[connection signal="gui_input" from="EmailView/HeaderTitles/Subject" to="EmailView" method="_on_Subject_gui_input"]
[connection signal="gui_input" from="EmailView/HeaderInfo/From" to="EmailView" method="_on_From_gui_input"]
[connection signal="gui_input" from="EmailView/HeaderInfo/Subject" to="EmailView" method="_on_Subject_gui_input"]
